[package]
name = "ctftool"
version = "0.2.0"
authors = ["mephi42 <mephi42@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
cookie = "0.16.2"
cookie_store = "0.19.1"
console = "0.15.7"
elf = "0.7.2"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
indicatif = "0.17.6"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
rpassword = "7.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
sha2 = "0.10.7"
time = "0.3.25"
tokio = { version = "1.30.0", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
hyper = { version = "0.14.27", features = ["server"] }
tempdir = "0.3.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ctf"
path = "src/main.rs"
