[package]
name = "ctftool"
version = "0.2.0"
authors = ["mephi42 <mephi42@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
cookie = "0.16.2"
cookie_store = "0.19.1"
console = "0.15.8"
elf = "0.7.4"
env_logger = "0.10.2"
futures = "0.3.30"
hex = "0.4.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.11.27", features = ["json", "multipart"] }
rpassword = "7.3.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
hyper = { version = "0.14.28", features = ["server"] }
tempdir = "0.3.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ctf"
path = "src/main.rs"
